--- a/Pipfile
+++ b/Pipfile
@@ -11,9 +11,13 @@ matplotlib = "*"
 pytesseract = "*"
 pillow = "*"
 tesseract = "*"
+tensorflow = "*"
+onnx = "*"
+onnx2keras = "*"
 
 [dev-packages]
 autopep8 = "*"
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
